--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <header class="topo">
             <section class="txttopo"><h1>Coma sem restrição as mais variadas e deliciosas receitas!</h1></section>
         <div id="video">
-                <iframe width="590" height="315" src="https://www.youtube.com/embed/tmoC6ppEgfM?start=8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/qKW6RbK89Hc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
             <a href="#" class="btcompra">
                 <p>QUERO COMPRAR AGORA!</p>
