--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
             </div>
         </section>
         <section id="sec8">
-            <div><iframe width="560" height="315" src="https://www.youtube.com/embed/8bEbPAm44lQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
+            <div> <iframe width="560" height="315" src="https://www.youtube.com/embed/Op04YH4Dpis" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/KhfljIQ99Vo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/FtD1PNy4aIY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
         <section id="sec9">
@@ -200,7 +200,7 @@
             <div class="sec12">
                 <h2>SUA SAÚDE VALE MAIS DO QUE R$0,36 POR DIA?</h2>
                 <p>SE SIM, NÃO DEIXE PRA DEPOIS! COMPRANDO AGORA O 500 RECEITAS ZERO <span>PARCELADO EM 10X</span> VOCÊ PAGA APENAS <span>R$0,36 POR DIA</span> PRA NUNCA MAIS TER QUE FICAR COMENDO AQUELAS COMIDAS RUINS SEM TEMPERO NENHUM.</p>
-                <a href="#" class="btcompraverde" >
+                <a href="#" class="btcompraverde">
                     <p> QUERO COMPRAR AGORA!</p>
                 </a> 
                 <img src="imagens/ftgarantia.png" alt="garantia" class="garantia">
@@ -226,7 +226,7 @@
                 <p>Todas as informações e conceitos utilizados aqui tem como objetivo apenas informar e educar. Este site e o e-book 500 Receitas ZERO Açúcar e Glúten foram disponibilizados com esse objetivo e não tem como intenção nenhuma servir ou substituir prescrição médica. Nenhuma informação deste site e do e-book 500 Receitas ZERO Açúcar e Glúten substitui uma consulta com seu médico, nutricionista ou profissional da saúde. Sempre procure um profissional da saúde antes de começar qualquer mudança na sua alimentação, inclusive o uso das receitas deste e-book.</p>
                     <p>Se por algum motivo você não gostar do material, ou achar que não serve pra você, não se preocupe, você tem uma garantia de 7 dias úteis a partir do momento da entrega. Para mais informações entre em contato conosco: contato@500receitaszero.com</p>
                     <p>COPYRIGHT 2021 | 500 RECEITAS ZERO AÇÚCAR E GLÚTEN – TODOS OS DIREITOS RESERVADOS.</p>
-                    <p>fim</p>
+                    <p>Não julgueis</p>
             </div>
         </footer>
     </main>
