--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Receitas sem Glutem ou açucar.</title>
     <link rel="stylesheet" href="stilo.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <meta name="facebook-domain-verification" content="8c9okg8m6ikzxfsgcgy5219pgmtgjf" />
+    <meta name="facebook-domain-verification" content="8c9okg8m6ikzxfsgcgy5219pgmtgjf" />
 
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -19,10 +21,6 @@
     
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5LGGP56"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
     <main>
         <header class="topo">
             <section class="txttopo"><h1>Coma sem restrição as mais variadas e deliciosas receitas!</h1></section>
@@ -247,6 +245,10 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5LGGP56"
+        height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
 				
 </body>
 </html>
