--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <title>Receitas sem Glutem ou açucar.</title>
+    <title>Receitas sem culpa.</title>
     <link rel="stylesheet" href="stilo.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <meta name="facebook-domain-verification" content="8c9okg8m6ikzxfsgcgy5219pgmtgjf" />
