--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/qKW6RbK89Hc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
             <a href="https://go.hotmart.com/M73234338D?ap=0e37" class="btcompra">
-                <p>QUERO COMPRAR AGORA!</p>
+                <p> QUERO COMER SEM RESTRIÇÕES! </p>
             </a>
         
             <img src="imagens/ftgarantia.png" alt="Compra Segura" class="garantia">
@@ -123,7 +123,7 @@
             </div>
 
             <a href="https://go.hotmart.com/M73234338D?ap=0e37" class="btcompraverde" >
-                <p>QUERO COMPRAR AGORA!</p>
+                <p> QUERO COMER SEM RESTRIÇÕES! </p>
             </a> 
         </section>
         <section id="sec6">
@@ -201,7 +201,7 @@
                     <p class="corte">De R$127,00 por</p>
                     <h2 class="preco">R$97,00</h2>
                     <a href="https://go.hotmart.com/M73234338D?ap=0e37" class="btcompraverde" >
-                        <p> QUERO COMPRAR AGORA!</p>
+                        <p> QUERO COMER SEM RESTRIÇÕES! </p>
                     </a> 
                         <p class="parcela">ou 10x de R$11,08</p>
                         <p class="segure">COMPRA SEGURA</p>
@@ -212,7 +212,7 @@
                 <h2>SUA SAÚDE VALE MAIS DO QUE R$0,36 POR DIA?</h2>
                 <p>SE SIM, NÃO DEIXE PRA DEPOIS! COMPRANDO AGORA O 500 RECEITAS ZERO <span>PARCELADO EM 10X</span> VOCÊ PAGA APENAS <span>R$0,36 POR DIA</span> PRA NUNCA MAIS TER QUE FICAR COMENDO AQUELAS COMIDAS RUINS SEM TEMPERO NENHUM.</p>
                 <a href="https://go.hotmart.com/M73234338D?ap=0e37" class="btcompraverde">
-                    <p> QUERO COMPRAR AGORA!</p>
+                    <p> QUERO COMER SEM RESTRIÇÕES! </p>
                 </a> 
                 <img src="imagens/ftgarantia.png" alt="garantia" class="garantia">
             </div>
@@ -237,7 +237,7 @@
                 <p>Todas as informações e conceitos utilizados aqui tem como objetivo apenas informar e educar. Este site e o e-book 500 Receitas ZERO Açúcar e Glúten foram disponibilizados com esse objetivo e não tem como intenção nenhuma servir ou substituir prescrição médica. Nenhuma informação deste site e do e-book 500 Receitas ZERO Açúcar e Glúten substitui uma consulta com seu médico, nutricionista ou profissional da saúde. Sempre procure um profissional da saúde antes de começar qualquer mudança na sua alimentação, inclusive o uso das receitas deste e-book.</p>
                     <p>Se por algum motivo você não gostar do material, ou achar que não serve pra você, não se preocupe, você tem uma garantia de 7 dias úteis a partir do momento da entrega. Para mais informações entre em contato conosco: contato@500receitaszero.com</p>
                     <p>COPYRIGHT 2021 | 500 RECEITAS ZERO AÇÚCAR E GLÚTEN – TODOS OS DIREITOS RESERVADOS.</p>
-                    <p>birulaibe</p>
+                    <!-- <p>birulaibe</p> -->
             </div>
         </footer>
     </main>
